<resources>
    <string name="app_name"> BoardGames for life</string>
    <string name="checkoutText"> CHECKOUT </string>
    <string name="hintNamePers"> Your name </string>
    <string name="hintNoPers"> No. of people </string>
    <string name="hintDateText">  Date </string>
    <string name="hintTimeText"> Hour </string>
    <string name="hintDurationText"> No. of hours </string>
    <string name="reservationTitle"> ONLINE RESERVATION </string>
    <string name="nameText"> Name </string>
    <string name="noPers"> Number of people </string>
    <string name="dateText"> Date </string>
    <string name="timeText"> Time </string>
    <string name="durationText"> Duration </string>
    <string name="specialMentions"> Other mentions </string>
    <string name="chooseBg">Choose Boardgame</string>
    <string name="foodDrink">Food and Drinks</string>
    <string name="checkout">Checkout</string>
    <string name="maxPlayersExceeded">Maximum players exceeded </string>
    <string name="minPlayers">Not enough players</string>
    <string name="noTime">Not enough time to finish the game</string>
    <string name="unavailableGame">Unavailable game,please pick another one</string>
    <string name="bg">BoardGame</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="total">Total</string>
    <string name="paymentPage">Proceed to payment</string>
    <string name="orderSucces">You have succesfully finished your command</string>
    <string name="people">Number of people</string>
    <string name="orderSumarry">Order Summary</string>
    <string name="date">Date</string>
    <string name="duration">Estimated Duration</string>
    <string name="time">Time</string>
    <string name="submit">Submit Order</string>

    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_register">New user,tap here to register</string>
    <string name="register">Register</string>

    <string name="user_successfully_added">User successfully added</string>
    <string name="user_unable_to_add">Unable to add user</string>
    <string name="adding_user_to_db">Adding user to database</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>

    <string name="font_family_roboto_light">sans-serif-thin</string>
    <string name="type_a_message">Type a message...</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>

    <string name="ma_header_text">Cafeneaua noastra te asteapta sa petreci timpul liber in compania prietenilor avand la dispozitie o gama variata de jocuri de societate. Pe durata jocurilor, snackbarul va sta la dispozitie. Enjoy!</string>
    <string name="ma_title">Bine ati venit!</string>
</resources>
