<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScreenLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservationPage">


    <ImageView
        android:id="@+id/imageReservation"
        android:layout_width="wrap_content"
        android:layout_height="162dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/rezervation_pic" />

    <TextView
        android:id="@+id/reservationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/reservationTitle"
        android:textColor="#ffffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageReservation"
        app:layout_constraintEnd_toEndOf="@+id/imageReservation"
        app:layout_constraintStart_toStartOf="@+id/imageReservation"
        app:layout_constraintTop_toTopOf="@+id/imageReservation" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/LayoutContent"
        android:layout_width="379dp"
        android:layout_height="279dp"
        android:layout_marginBottom="68dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageReservation"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/noPers"
            android:layout_width="167dp"
            android:layout_height="38dp"
            android:layout_marginEnd="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="48dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/hintNoPers"
            android:inputType="numberSigned"
            app:layout_constraintBaseline_toBaselineOf="@+id/noPersText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/noPersText" />

        <TextView
            android:id="@+id/noPersText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            android:text="@string/noPers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/dateText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noPersText" />

        <EditText
            android:id="@+id/date"
            android:layout_width="167dp"
            android:layout_height="38dp"
            android:layout_marginEnd="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="48dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/hintDateText"
            android:inputType="date"
            app:layout_constraintBaseline_toBaselineOf="@+id/dateText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/dateText" />

        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/timeText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateText" />

        <EditText
            android:id="@+id/time"
            android:layout_width="167dp"
            android:layout_height="38dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/hintTimeText"
            android:inputType="time"
            app:layout_constraintBaseline_toBaselineOf="@+id/timeText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.707"
            app:layout_constraintStart_toEndOf="@+id/timeText" />

        <TextView
            android:id="@+id/durationText"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/durationText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeText" />

        <EditText
            android:id="@+id/duration"
            android:layout_width="167dp"
            android:layout_height="38dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/hintDurationText"
            android:inputType="numberSigned"
            app:layout_constraintBaseline_toBaselineOf="@+id/durationText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.642"
            app:layout_constraintStart_toEndOf="@+id/durationText" />
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/specialMentions"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/specialMentions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/checkoutButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LayoutContent" />

    <Button
        android:id="@+id/checkoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:text="@string/checkoutText"
        app:layout_constraintBaseline_toBaselineOf="@+id/specialMentions"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>